# GlintGlide

./: .gitignore  CMakeLists.txt  main.cpp
include/: encoder.h  encoder_def.h
src/: encoder.cpp
